@@ -127,7 +127,7 @@ MPEGaudio:: ActualSpec(const SDL_AudioSpec *actual)
     {
         fprintf(stderr, "Warning: incorrect audio format\n");
     }
-    rate_in_s = (double)(((actual->format&0xFF)/8)*actual->channels*actual->freq);
+    rate_in_s=((double)((actual->format&0xFF)/8)*actual->channels*actual->freq);
 }
 
 #ifdef THREADED_AUDIO
