@@ -1,4 +1,6 @@
 0.4.0:
+Sam Lantinga - Tue Apr 18 17:12:16 PDT 2000
+ * Adjusted the audio startup timing based on experimentation
 Hiroshi Yamashita - Tue Apr 18 15:48:14 PDT 2000
  * Improved audio synchronization with longer movies (double rate_deal)
 Sam Lantinga - Fri Apr 14 13:21:51 PDT 2000
